fix: ensure consistent alignment for checkbox label (#409)

--- a/packages/css/src/formElements/checkbox/checkbox.css
+++ b/packages/css/src/formElements/checkbox/checkbox.css
@@ -12,6 +12,7 @@
 
 .md-checkbox__label {
   display: inline-flex;
+  align-items: center;
   cursor: pointer;
   position: relative;
 }
